<resources>
    <!-- Appname -->
    <string name="app_name">DayCounter</string>

    <!-- Strings used for fragments for navigation -->
    <string name="fragment_start_label">Start Page</string>
    <string name="fragment_reminders_label">Reminders</string>
    <string name="fragment_settings_label">Settings</string>
    <string name="fragment_edit_counters_label">Edit main counter</string>
    <string name="fragment_popup_label">Pop up</string>

    <!--String for nav buttons-->
    <string name="goto_other_counters_text">Counters</string>
    <string name="goto_settings_text">Settings</string>
    <string name="goto_start_page_text">Day counter</string>

    <!-- Font stuff -->
    <font name="navigation_button_font">@font/julius_sans_one</font>
    <font name="settings_button_font">@font/julius_sans_one</font>
    <font name="navigation_button_text_size">@font/julius_sans_one</font>

    <!-- CHANNEL STUFF -->
    <string name="anniversary_channel">Anniversary Notifications</string>
    <string name="anniversary_channel_desc">Enable notifications for your anniversaries</string>

    <string name="reminders_channel">Reminder Notifications</string>
    <string name="reminders_channel_desc">Enable notifications for your anniversaries</string>

    <!-- Change main counter -->
    <string name="input_name_person_one">Name of you</string>
    <string name="input_name_person_two">Name of SO</string>
    <string name="confirm_text">Apply</string>

    <!--Strings for settings buttons-->
    <string name="enable_notifications_text">Enable notifications</string>
    <string name="enable_notifications_info">Enable to get notifications on special dates!</string>
    <string name="run_in_background_text">Run in background</string>
    <string name="run_in_background_info">Needed in order to calculate certain dates!</string>
    <string name="enable_dark_mode_text">Switch light/dark theme</string>
    <string name="enable_dark_mode_info">Change the applications appearance!</string>
    <string name="backup_text">Backup your data</string>
    <string name="backup_info">Feature will be implemented eventually</string>
    <string name="rate_app_text">Rate the app</string>
    <string name="rate_app_info">You can rate this app via E-Mail</string>
    <string name="support_text">Support</string>
    <string name="support_info">Do you need help? Send an E-Mail!</string>

    <!-- Misc buttons -->
    <string name="add_reminder">Add Reminder</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_text">Save</string>
    <string name="cancel_text">Cancel</string>
    <string name="description_text">Write a description for your reminder</string>
    <string name="title_text">Enter a title</string>
    <string name="gay_mode_text">Enable Gay Mode</string>
    <string name="gaymode_info">Support da priiidddeeeee</string>

</resources>