<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nav_graph"
        app:startDestination="@id/StartFragment">

    <fragment android:id="@+id/StartFragment"
            android:name="com.daycounter.fragment.StartFragment"
            android:label="@string/fragment_start_label"
            tools:layout="@layout/fragment_start">

        <action android:id="@+id/action_start_to_reminders"
                app:destination="@id/RemindersFragment" />

        <action android:id="@+id/action_start_to_settings"
                app:destination="@id/SettingsFragment" />

        <action android:id="@+id/action_start_to_editcounters"
                app:destination="@id/EditCountersFragment" />
    </fragment>

    <fragment android:id="@+id/RemindersFragment"
            android:name="com.daycounter.fragment.RemindersFragment"
            android:label="@string/fragment_reminders_label"
            tools:layout="@layout/fragment_reminders">

        <action android:id="@+id/action_reminders_to_start"
                app:destination="@id/StartFragment" />

        <action android:id="@+id/action_counters_to_settings"
                app:destination="@id/SettingsFragment" />
    </fragment>

    <fragment android:id="@+id/SettingsFragment"
            android:name="com.daycounter.fragment.SettingsFragment"
            android:label="@string/fragment_settings_label"
            tools:layout="@layout/fragment_settings">

        <action android:id="@+id/action_settings_to_start"
                app:destination="@id/StartFragment" />

        <action android:id="@+id/action_settings_to_reminders"
                app:destination="@id/RemindersFragment" />
    </fragment>

    <fragment android:id="@+id/EditCountersFragment"
            android:name="com.daycounter.fragment.EditMainCountersFragment"
            android:label="@string/fragment_edit_counters_label"
            tools:layout="@layout/fragment_edit_counters">

        <action android:id="@+id/action_editcounter_to_start"
                app:destination="@id/StartFragment" />
    </fragment>

</navigation>